@@ -1,3 +1,7 @@
+2011-12-16  Doug Evans  <dje@google.com>
+
+	* NEWS: Add entry for stdio gdbserver.
+
 2011-12-16  Phil Muldoon  <pmuldoon@redhat.com>
 
 	* python/python.c: Define python_excp_enums.
